[OPENMEETINGS-2177] export is converted