@@ -26,7 +26,6 @@ import java.io.File;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.DoubleConsumer;
@@ -60,14 +59,14 @@ public class VideoConverter extends BaseConverter {
 				input = Files.move(mp4.toPath(), tmp, REPLACE_EXISTING).toFile().getCanonicalPath();
 			}
 			progress.ifPresent(theProgress -> theProgress.accept(STEP));
-			List<String> args = new ArrayList<>(Arrays.asList(getPathToFFMPEG(), "-y"));
+			List<String> args = new ArrayList<>(List.of(getPathToFFMPEG(), "-y"));
 			if (sf.isAudio()) {
 				// need to add background image, it should be jpg since black on transparent will be invisible
-				args.addAll(Arrays.asList("-loop", "1"//
+				args.addAll(List.of("-loop", "1"//
 						, "-framerate", "24"//
 						, "-i", new File(getCssImagesDir(), "audio.jpg").getCanonicalPath()));
 			}
-			args.addAll(Arrays.asList("-i", input //
+			args.addAll(List.of("-i", input //
 					, "-c:v", "h264" //
 					, "-c:a", "aac" //
 					, "-pix_fmt", "yuv420p"));
