@@ -24,7 +24,7 @@ import static org.apache.openmeetings.web.pages.auth.SignInPage.getRedirectUri;
 
 import java.util.AbstractMap.SimpleEntry;
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
@@ -105,11 +105,11 @@ public class OAuthForm extends AdminBaseForm<OAuthServer> {
 		add(new RequiredTextField<String>("clientSecret").setLabel(new ResourceModel("1577")));
 		add(redirectUriText = (TextField<String>) new TextField<>("redirectUri", Model.of("")).setLabel(new ResourceModel("1587")));
 		add(new RequiredTextField<String>("requestKeyUrl").setLabel(new ResourceModel("1578")));
-		add(new DropDownChoice<>("requestTokenMethod", Arrays.asList(RequestTokenMethod.values()), new ChoiceRenderer<RequestTokenMethod>("name", "name")));
+		add(new DropDownChoice<>("requestTokenMethod", List.of(RequestTokenMethod.values()), new ChoiceRenderer<RequestTokenMethod>("name", "name")));
 		add(new RequiredTextField<String>("requestTokenUrl").setLabel(new ResourceModel("1579")));
 		add(new RequiredTextField<String>("requestTokenAttributes").setLabel(new ResourceModel("1586")));
 		add(new RequiredTextField<String>("requestInfoUrl").setLabel(new ResourceModel("1580")));
-		add(new DropDownChoice<>("requestInfoMethod", Arrays.asList(RequestInfoMethod.values()), new ChoiceRenderer<RequestInfoMethod>("name", "name")));
+		add(new DropDownChoice<>("requestInfoMethod", List.of(RequestInfoMethod.values()), new ChoiceRenderer<RequestInfoMethod>("name", "name")));
 		Form<Void> mappingForm = new Form<>("mappingForm");
 		final TextField<String> omAttr = new TextField<>("omAttr", Model.of(""));
 		final TextField<String> oauthAttr = new TextField<>("oauthAttr", Model.of(""));
